// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterNetwork > should render empty 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <ul
      class="flex flex-wrap"
      data-testid="NetworkOptions"
    />
  </div>
</div>
`;

exports[`FilterNetwork > should render public networks 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <ul
      class="flex flex-wrap"
      data-testid="NetworkOptions"
    >
      <li
        class="inline-block cursor-pointer pb-5 pr-5"
        data-testid="NetworkOption__ark.mainnet"
      >
        <div
          class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        >
          <div
            aria-label="ARK"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
            data-testid="NetworkIcon-ARK-ark.mainnet"
          >
            <div
              class="text-theme-secondary-300 css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <span
            class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block cursor-pointer pb-5 pr-5"
        data-testid="NetworkOption__ark.devnet"
      >
        <div
          class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        >
          <div
            aria-label="ARK Devnet"
            class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="text-theme-secondary-300 css-1i4b0eq"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg
                id="ark"
                viewBox="0 0 36.3 30.6"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <span
            class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
          >
            <span />
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FilterNetworks > should render empty 1`] = `
<div>
  <div
    class="space-y-4"
  />
</div>
`;

exports[`FilterNetworks > should render public and testnet networks 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle a testnet network option 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle view all 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <div
        class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-700 bg-theme-primary-700 text-white css-1jo8u8k"
        >
          <div
            class="transition-transform rotate-180 css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
      <label
        class="mt-4 inline-flex cursor-pointer items-center space-x-3 text-theme-secondary-text"
      >
        <input
          class="css-kf7z38"
          color="success"
          data-testid="FilterNetwork__select-all-checkbox"
          type="checkbox"
        />
        <span>
          Select All
        </span>
      </label>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <div
        class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800 css-1jo8u8k"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks > should toggle view all 2`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Public Networks
      </div>
      <div
        class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800 css-1jo8u8k"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.mainnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-3 text-sm font-bold text-theme-secondary-400"
      >
        Development Networks
      </div>
      <div
        class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-700"
        >
          All
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800 css-1jo8u8k"
        >
          <div
            class="transition-transform css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="chevron-down-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="flex flex-wrap"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block cursor-pointer pb-5 pr-5"
          data-testid="NetworkOption__ark.devnet"
        >
          <div
            class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="text-theme-secondary-300 css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <span
              class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NetworkOptions > should render available networks options 1`] = `
<div>
  <ul
    class="flex flex-wrap"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block cursor-pointer pb-5 pr-5"
      data-testid="NetworkOption__ark.mainnet"
    >
      <div
        class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
      >
        <div
          aria-label="ARK"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
          data-testid="NetworkIcon-ARK-ark.mainnet"
        >
          <div
            class="text-theme-secondary-300 css-1i4b0eq"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg
              id="ark"
              viewBox="0 0 36.3 30.6"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block cursor-pointer pb-5 pr-5"
      data-testid="NetworkOption__ark.devnet"
    >
      <div
        class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
      >
        <div
          aria-label="ARK Devnet"
          class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
          data-testid="NetworkIcon-ARK-ark.devnet"
        >
          <div
            class="text-theme-secondary-300 css-1i4b0eq"
            data-testid="NetworkIcon__icon"
            height="20"
            width="20"
          >
            <svg
              id="ark"
              viewBox="0 0 36.3 30.6"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
        <span
          class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 css-1jo8u8k"
        >
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions > should render empty 1`] = `
<div>
  <ul
    class="flex flex-wrap"
    data-testid="NetworkOptions"
  />
</div>
`;

exports[`ToggleAllOption > should render 1`] = `
<div>
  <div
    class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-100 text-theme-primary-700 dark:border-theme-secondary-800 css-1jo8u8k"
    >
      <div
        class="transition-transform css-15txs7d"
        height="10"
        width="10"
      >
        <svg
          id="chevron-down-small"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;

exports[`ToggleAllOption > should render hidden 1`] = `<div />`;

exports[`ToggleAllOption > should render selected 1`] = `
<div>
  <div
    class="relative mr-5 cursor-pointer border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-700"
    >
      All
    </div>
    <span
      class="flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-theme-primary-700 bg-theme-primary-700 text-white css-1jo8u8k"
    >
      <div
        class="transition-transform rotate-180 css-15txs7d"
        height="10"
        width="10"
      >
        <svg
          id="chevron-down-small"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;
